--- a/SimpleWeather/Base.lproj/Main.storyboard
+++ b/SimpleWeather/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="66f-NK-WFW">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -17,84 +17,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T14-RM-KnR">
-                                <rect key="frame" x="213" y="181" width="175" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="175" id="CSl-JO-FOZ"/>
-                                    <constraint firstAttribute="height" constant="120" id="cNd-U7-m5m"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYM-wU-eYO">
-                                <rect key="frame" x="552" y="28" width="32" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="32" id="7OL-jC-9I2"/>
-                                    <constraint firstAttribute="width" constant="32" id="eig-pB-bsi"/>
-                                </constraints>
-                                <state key="normal" image="settings_default"/>
-                                <state key="highlighted" image="settings_highlighted"/>
-                                <connections>
-                                    <segue destination="Ytx-5G-Fln" kind="presentation" identifier="showSearch" modalTransitionStyle="coverVertical" id="zy1-PH-6Bc"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYW-4i-ui4">
-                                <rect key="frame" x="16" y="135" width="568" height="38.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVn-0l-j7c">
-                                <rect key="frame" x="16" y="28" width="528" height="17"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Info" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYl-3b-TZZ">
-                                <rect key="frame" x="16" y="309" width="568" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="16" y="118" width="568" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5G-Vp-0ef">
-                                <rect key="frame" x="16" y="100" width="568" height="26.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
+                                <rect key="frame" x="16" y="72" width="568" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="32"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYW-4i-ui4">
+                                <rect key="frame" x="16" y="138" width="568" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T14-RM-KnR">
+                                <rect key="frame" x="236" y="198" width="128" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="LJk-3B-18U"/>
+                                    <constraint firstAttribute="width" constant="128" id="cT9-Cw-k7v"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="T14-RM-KnR" secondAttribute="centerX" id="2sB-Ia-YjJ"/>
-                            <constraint firstItem="d5G-Vp-0ef" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="4Da-Ax-pbf"/>
-                            <constraint firstItem="kYW-4i-ui4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="8sX-5u-vf0"/>
-                            <constraint firstItem="dYM-wU-eYO" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="9BQ-qi-Gpn"/>
-                            <constraint firstAttribute="centerX" secondItem="d5G-Vp-0ef" secondAttribute="centerX" id="BIh-Qd-9Xz"/>
-                            <constraint firstItem="gVn-0l-j7c" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="BXN-Xc-hXi"/>
-                            <constraint firstAttribute="centerX" secondItem="kYW-4i-ui4" secondAttribute="centerX" id="CB4-7r-EWL"/>
-                            <constraint firstItem="kYW-4i-ui4" firstAttribute="top" secondItem="d5G-Vp-0ef" secondAttribute="bottom" constant="8.5" id="D3V-rA-Owm"/>
-                            <constraint firstItem="RYl-3b-TZZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Hpy-hQ-jSo"/>
-                            <constraint firstAttribute="trailing" secondItem="kYW-4i-ui4" secondAttribute="trailing" constant="16" id="Pm9-hm-kA7"/>
-                            <constraint firstItem="dYM-wU-eYO" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="R7B-kx-lqC"/>
-                            <constraint firstItem="RYl-3b-TZZ" firstAttribute="top" secondItem="T14-RM-KnR" secondAttribute="bottom" constant="8" id="Zlb-eO-ChO"/>
-                            <constraint firstItem="d5G-Vp-0ef" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="80" id="ZzV-E1-eO0"/>
-                            <constraint firstItem="d5G-Vp-0ef" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="b7A-K9-g7q"/>
-                            <constraint firstItem="T14-RM-KnR" firstAttribute="top" secondItem="kYW-4i-ui4" secondAttribute="bottom" constant="8" id="bDj-D0-b0B"/>
-                            <constraint firstItem="gVn-0l-j7c" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dxQ-nL-Mbe"/>
-                            <constraint firstAttribute="centerX" secondItem="RYl-3b-TZZ" secondAttribute="centerX" id="nFu-hP-13W"/>
-                            <constraint firstItem="dYM-wU-eYO" firstAttribute="leading" secondItem="gVn-0l-j7c" secondAttribute="trailing" constant="8" id="rJv-g0-Xw3"/>
-                            <constraint firstItem="RYl-3b-TZZ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="uwv-a9-KnG"/>
+                            <constraint firstItem="T14-RM-KnR" firstAttribute="top" secondItem="kYW-4i-ui4" secondAttribute="bottom" id="0n6-CE-F79"/>
+                            <constraint firstItem="RYl-3b-TZZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1fg-zc-DXL"/>
+                            <constraint firstItem="d5G-Vp-0ef" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="9Nk-Ak-IfO"/>
+                            <constraint firstItem="RYl-3b-TZZ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="FGf-OH-7eQ"/>
+                            <constraint firstAttribute="centerX" secondItem="T14-RM-KnR" secondAttribute="centerX" id="PZG-Yy-4mR"/>
+                            <constraint firstAttribute="centerX" secondItem="RYl-3b-TZZ" secondAttribute="centerX" id="Qwk-6I-8fT"/>
+                            <constraint firstItem="kYW-4i-ui4" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="UdT-xf-X77"/>
+                            <constraint firstAttribute="centerX" secondItem="kYW-4i-ui4" secondAttribute="centerX" id="WHd-4Y-gAl"/>
+                            <constraint firstItem="d5G-Vp-0ef" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="gk8-v2-Ii6"/>
+                            <constraint firstItem="d5G-Vp-0ef" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ozs-IK-oQh"/>
+                            <constraint firstAttribute="centerX" secondItem="d5G-Vp-0ef" secondAttribute="centerX" id="qKF-43-87B"/>
+                            <constraint firstItem="RYl-3b-TZZ" firstAttribute="top" secondItem="d5G-Vp-0ef" secondAttribute="bottom" constant="8" symbolic="YES" id="qmM-fj-VqR"/>
+                            <constraint firstItem="kYW-4i-ui4" firstAttribute="top" secondItem="RYl-3b-TZZ" secondAttribute="bottom" id="qmo-w7-FTS"/>
+                            <constraint firstItem="kYW-4i-ui4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ylI-ha-t8o"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="r7C-md-2o0">
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="R3z-vH-ne1">
+                            <connections>
+                                <segue destination="17v-ed-WdW" kind="presentation" identifier="showSearch" id="a3g-5N-dN7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="cityLabel" destination="d5G-Vp-0ef" id="aC0-0o-nCX"/>
                         <outlet property="iconImageView" destination="T14-RM-KnR" id="lme-aR-XGu"/>
                         <outlet property="infoLabel" destination="RYl-3b-TZZ" id="3vb-wU-18l"/>
                         <outlet property="tempLabel" destination="kYW-4i-ui4" id="C9S-Z5-NUv"/>
-                        <outlet property="updateLabel" destination="gVn-0l-j7c" id="q2B-RD-jwm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-124" y="340"/>
+            <point key="canvasLocation" x="688" y="340"/>
         </scene>
         <!--Search Table View Controller-->
         <scene sceneID="kGn-H3-N82">
@@ -118,9 +101,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="rGp-xP-Ute">
-                        <barButtonItem key="leftBarButtonItem" image="location" id="ppu-Xq-Dmb"/>
+                        <barButtonItem key="leftBarButtonItem" image="location" id="UMt-91-5QG">
+                            <connections>
+                                <action selector="findLocationAction:" destination="Vqh-Pc-zsF" id="WoM-Kx-Ylr"/>
+                            </connections>
+                        </barButtonItem>
                         <connections>
-                            <outlet property="titleView" destination="bnB-z2-dLa" id="XpS-TQ-iwE"/>
+                            <outlet property="titleView" destination="bnB-z2-dLa" id="LFi-Hr-5CB"/>
                         </connections>
                     </navigationItem>
                     <connections>
@@ -131,36 +118,52 @@
                 <searchBar contentMode="redraw" placeholder="City name" showsCancelButton="YES" id="bnB-z2-dLa">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="words" enablesReturnKeyAutomatically="YES"/>
                     <connections>
                         <outlet property="delegate" destination="Vqh-Pc-zsF" id="icL-oW-6a7"/>
                     </connections>
                 </searchBar>
             </objects>
-            <point key="canvasLocation" x="1242" y="340"/>
+            <point key="canvasLocation" x="688" y="1088"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="ULI-nj-kvF">
+        <scene sceneID="usf-Jo-lQb">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ytx-5G-Fln" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="66f-NK-WFW" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SSl-GR-otp">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SlD-Cd-yFc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Vqh-Pc-zsF" kind="relationship" relationship="rootViewController" id="mpT-Dw-STQ"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="VSZ-KA-D7a"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QlB-UF-5yb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eRq-ux-b69" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="560" y="340"/>
+            <point key="canvasLocation" x="-124" y="340"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Chg-MN-qke">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="17v-ed-WdW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dF2-i8-xxL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Vqh-Pc-zsF" kind="relationship" relationship="rootViewController" id="qNZ-2M-zvO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YYp-5O-kmV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-124" y="1088"/>
         </scene>
     </scenes>
     <resources>
         <image name="location" width="16" height="16"/>
-        <image name="settings_default" width="32" height="32"/>
-        <image name="settings_highlighted" width="32" height="32"/>
     </resources>
 </document>
